klasa student gotova

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url= jdbc:mysql://localhost:3306/learn_spring_boot_with_real_apps
+spring.datasource.url= jdbc:mysql://localhost:3306/student
 spring.datasource.username=pera
 spring.datasource.password=genije
 
