--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,14 @@
-spring.datasource.url= jdbc:mysql://localhost:3306/student
+#spring.datasource.url= jdbc:mysql://localhost:3306/student
+
+spring.datasource.url= jdbc:mysql://localhost:3306/learn_spring_boot_with_real_apps
+
 spring.datasource.username=pera
 spring.datasource.password=genije
+spring.jpa.hibernate.ddl-auto=create-drop
+	# ovo gornje uvijek iznova obrise tabelu pa je ponovo kreira
+spring.jpa.show-sql=true
+	# ovo gornje pokazuje sql kod u konzoli 
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=
 
+	 # nakon tarabe mozes kucati sta oces
